Bug 284725 - OSEE crashes on German locale